objects/sumoapp__Resource__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Capacity__c</fullName>
        <inlineHelpText>How many people this room can accommodate?</inlineHelpText>
        <label>Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__ConnectedDate__c</fullName>
        <label>Connected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sumoapp__ExternalName__c</fullName>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__FullLocationDescription__c</fullName>
        <formula>IF(ISBLANK(sumoapp__Location__r.Name), &apos;&apos;, sumoapp__Location__r.Name + &apos;, &apos;) +
        IF(ISBLANK(sumoapp__Location__r.sumoapp__Area__r.Name), &apos;&apos;, sumoapp__Location__r.sumoapp__Area__r.Name + &apos;, &apos;) + 
        IF(ISBLANK(sumoapp__Location__r.sumoapp__Area__r.sumoapp__ParentArea__r.Name), &apos;&apos;, sumoapp__Location__r.sumoapp__Area__r.sumoapp__ParentArea__r.Name + &apos;&apos;)</formula>
        <label>FullLocationDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__FullResourceDescription__c</fullName>
        <formula>IF(NOT(ISBLANK(RecordTypeId)),RecordType.Name,&apos;&apos;)
+ IF(OR(NOT(ISBLANK(sumoapp__Location__r.sumoapp__Area__c)),NOT(ISBLANK(sumoapp__Location__c))),&apos; • &apos;, &apos;&apos;)
+ IF(ISBLANK(sumoapp__Location__r.sumoapp__Area__c),&apos;&apos;,sumoapp__Location__r.sumoapp__Area__r.Name + &apos; - &apos;)
+ IF(ISBLANK(sumoapp__Location__c), &apos;&apos;,sumoapp__Location__r.Name)</formula>
        <label>Full Resource Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sumoapp__Location__c</referenceTo>
        <relationshipLabel>Rooms / Resources</relationshipLabel>
        <relationshipName>LocationResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUTHORIZED</fullName>
                    <label>Mapped</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SUMO Resource</label>
    <listViews>
        <fullName>sumoapp__All</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__Location__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All SUMO Resources</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Resources</pluralLabel>
    <recordTypes>
        <fullName>sumoapp__Laptop</fullName>
        <active>true</active>
        <label>Laptops</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Projector</fullName>
        <active>true</active>
        <label>Projectors</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Room</fullName>
        <active>true</active>
        <label>Rooms</label>
    </recordTypes>
    <recordTypes>
        <fullName>sumoapp__Tablet</fullName>
        <active>true</active>
        <label>Tablets</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sumoapp__Location_is_required_for_Rooms</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Room&apos; &amp;&amp; ISBLANK(sumoapp__Location__c)</errorConditionFormula>
        <errorDisplayField>sumoapp__Location__c</errorDisplayField>
        <errorMessage>Since rooms exist inside locations, you must choose a location for each room.</errorMessage>
    </validationRules>
</CustomObject>